// Generated file
import "ccsds_mal/types.proto";
import "ccsds_cs/Provider.proto";
import "ccsds_mal/NamedValue.proto";


package userEvent.protobuf;

message ExternalEvent {
extensions 7 to 107;

  optional ccsds_mal.protobuf.TIME eventDate = 1;
  optional ccsds_mal.protobuf.TIME systemDate = 2;
  optional ccsds_mal.protobuf.STRING mission = 3;
  optional ccsds_mal.protobuf.ULONG satellite = 4;
  optional ccsds_mal.protobuf.BLOB producer = 5;
  repeated ccsds_mal.protobuf.NamedValue specificAttributes = 6;
}
